[package]
name = "trading-data"
version = "0.1.0"
edition = "2024"

[dependencies]
application-beans = { git = "https://github.com/caijh/application-rs.git" }
application-core = { git = "https://github.com/caijh/application-rs.git" }
application-context = { git = "https://github.com/caijh/application-rs.git" }
application-web = { git = "https://github.com/caijh/application-rs.git" }
application-web-macros = { git = "https://github.com/caijh/application-rs.git" }
application-web-actuator = { git = "https://github.com/caijh/application-rs.git" }
application-schedule = { git = "https://github.com/caijh/application-rs.git" }
application-cache = { git = "https://github.com/caijh/application-rs.git" }
application-boot = { git = "https://github.com/caijh/application-rs.git" }

# log
tracing = "0.1.41"

# database
database-common = { git = "https://github.com/caijh/application-rs.git" }
database-mysql-seaorm = { git = "https://github.com/caijh/application-rs.git" }
sea-orm = { version = "1.1.3", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-bigdecimal", "with-uuid", "with-json", "with-chrono", "with-time"] }

# redis
redis = { version = "0.27.6", features = ["tls-native-tls"] }
redis-io = { git = "https://caijh@bitbucket.org/bytebinary/redis-io-rs.git" }

# web
async-trait = "0.1.84"
axum = "0.7.9"
# util
util = { git = "https://caijh@bitbucket.org/bytebinary/util-rs.git"}

reqwest = { version = "0.12.12", features = ["cookies", "blocking", "gzip"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0.134"
chrono = "0.4"
rand = "0.9.0"
calamine = "0.26.1"
bigdecimal = "0.4.7"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
notification = { git = "https://caijh@bitbucket.org/bytebinary/notification-rs.git" }
tempfile = "3.15.0"
lazy_static = "1.5.0"
chrono-tz = "0.10.0"
scraper = "0.23.1"

[features]
default = ["signal"]
signal = ["tokio-cron-scheduler/signal"]

